@@ -36,6 +36,12 @@ EXPORT QUALIFIED SetReturnCheck, SetNilCheck, SetCaseCheck,
                  SetCheckAll, SetVerboseUnbounded, SetQuiet, SetCpp,
                  SetMakeall, SetMakeall0, SetIncludePath,
                  SetUnboundedByReference,
+                 SetSearchPath, SetISO, SetPIM, SetPIM2, SetPIM3, SetPIM4,
+                 SetPositiveModFloor, SetCompilerDebugging, SetExceptions,
+                 SetStudents, SetPedantic, SetPedanticParamNames, SetPedanticCast,
+                 SetExtendedOpaque, SetXCode, SetQuadDebugging, SetSources, SetDumpSystemExports,
+                 SetSwig, DisplayVersion, SetOptimizing, SetForcedLocation,
+                 SetCC1Quiet,
 
                  Iso, Pim, Pim2, Pim3, Pim4,
                  PositiveModFloorDiv,
